# asic_soc

./: .gitignore  CLAUDE.md  DESIGN_DECISIONS.md  INTERVIEW_PREP.md  Makefile  PROGRESS.md  README.md
.claude/: settings.json
.claude/agents/: dv-debugger.md  rtl-reviewer.md
.claude/commands/: timing-triage.md  verify-all.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FLOW.md  HARDENING.md  PD_PORTFOLIO.md
flow/formal/: alu.sby  alu_formal.sv  pipeline_formal.sv  pipeline_safety.sby  pipeline_safety_props.sv  run_formal.sh
flow/pnr/: config.mk  config_soc.mk  run_drc_lvs.sh  run_pnr.sh
flow/sta/: riscv_pipeline.sdc  run_sta.sh  soc_chip.sdc  sta.tcl
formal/assertions/: riscv_core_sva.sv
fw/: hello_irq.hex  hello_irq.s
gds_flow/: README.md  RESULTS.md  SIGNOFF.md  openlane_config.json  riscv_pipeline_sky130_area.rpt
gds_flow/openlane2/: README.md  config.json
gds_flow/reports/: cts_timing_summary.rpt  diearea.txt  magic_drc.txt  metrics.csv  synthesis_area.rpt
gds_flow/signoff/: drc.rpt  metrics.csv  sta_signoff_summary.rpt
regs/: sysctl.rdl
riscv-soc/: Makefile  README.md
riscv-soc-dft/: README.md
riscv-soc-dft/fault_sim/: Makefile  (+3 more)
riscv-soc-dv/: BUGS_FOUND.md  README.md  VERIFICATION_PLAN.md
riscv-soc-pd/: README.md
riscv-soc-pd/timing_cli/: README.md  pyproject.toml
riscv-soc-pd/timing_cli/samples/: logic_depth.rpt  rc_dominated.rpt  skew.rpt
riscv-soc-pd/timing_cli/tests/: test_classify.py
riscv-soc-pd/timing_cli/timing_cli/: __init__.py  cli.py  core.py
scripts/: gen_regs.sh  metrics.py
tools/: versions.env
(+91 files in other folders)
